fix moblie menu overlap

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,8 @@ h6 {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  position: relative;
+  z-index: 0;
 }
 
 .container {
@@ -881,7 +883,7 @@ h6 {
 .portfolio-card__overlay {
   position: absolute;
   z-index: 1;
-  top: 0;
+  top: 1px;
   left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -907,8 +909,8 @@ h6 {
 
 .portfolio-card__link:hover .portfolio-card__overlay,
 .portfolio-card__link:focus .portfolio-card__overlay {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  -webkit-transform: translateY(-1px);
+          transform: translateY(-1px);
 }
 
 .portfolio-card__photo {
@@ -950,7 +952,7 @@ h6 {
 
 .page-header__container {
   position: relative;
-  z-index: 0;
+  z-index: 1;
 }
 
 @media screen and (min-width: 768px) {
