--- a/sass/base/_page-container.scss
+++ b/sass/base/_page-container.scss
@@ -6,4 +6,6 @@
 
 .page-container__body {
   flex-grow: 1;
+  position: relative;
+  z-index: 0;
 }
