--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -4,7 +4,7 @@
 
 .page-header__container {
   position: relative;
-  z-index: 0;
+  z-index: 1;
 }
 
 .page-header__logo {
